Fix: Make Accordion clickable on Safari mobile

--- a/src/_objects.accordion.scss
+++ b/src/_objects.accordion.scss
@@ -2,6 +2,11 @@
   padding: 6px 9px;
 }
 
+// used for safari mobile (otherwise click event delegation won't work)
+%clickable {
+  cursor: pointer;
+}
+
 .accordion {
   margin-top: 10px;
   background: transparent;
@@ -10,6 +15,7 @@
 .accordion__head {
   @extend %content-padding;
   @extend .non-selectable;
+  @extend %clickable;
   padding-bottom: 5px;
   border-bottom: 1px solid #cccccc;
   position: relative;
@@ -53,6 +59,7 @@
     background-color: #E2E2E2;
     float: left;
     text-align: center;
+    @extend %clickable;
   }
 
   // element to place content on head's right-hand side
